# gated

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  config-schema.json  deny.toml  justfile
.github/: FUNDING.yml
.github/workflows/: build.yml  docker.yml  test.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  changelog.md
docs/plan/: PLAN-005.md  index.md
docs/task/: INFRA-001.md  UI-002.md  UI-003.md  UI-004.md  UI-005.md  UI-006.md  UI-007.md  UI-008.md  UI-009.md  UI-010.md  UI-011.md  UI-012.md  UI-013.md  UI-014.md  UI-015.md  index.md
gated/: Cargo.toml
gated-admin/: Cargo.toml
gated-admin/src/: lib.rs  main.rs
gated-admin/src/api/: certificate_credentials.rs  known_hosts_detail.rs  known_hosts_list.rs  ldap_servers.rs  logs.rs  mod.rs  otp_credentials.rs  pagination.rs  parameters.rs  password_credentials.rs  public_key_credentials.rs  recordings_detail.rs  roles.rs  sessions_detail.rs  sessions_list.rs  ssh_connection_test.rs  ssh_keys.rs  sso_credentials.rs  target_groups.rs  targets.rs  tickets_detail.rs  tickets_list.rs  users.rs
gated-ca/: Cargo.toml
gated-ca/src/: lib.rs
gated-common/: Cargo.toml
gated-common/src/: api.rs  config_schema.rs  error.rs  http_headers.rs  lib.rs  version.rs
gated-common/src/auth/: state.rs
gated-common/src/config/: mod.rs  target.rs
gated-common/src/helpers/: fs.rs  otp.rs
gated-common/src/types/: listen_endpoint.rs
gated-core/: Cargo.toml
gated-core/src/: auth_state_store.rs  consts.rs  data.rs  services.rs  state.rs
gated-core/src/config_providers/: db.rs  mod.rs
gated-core/src/db/: mod.rs
gated-core/src/logging/: database.rs  http.rs  json_console.rs  layer.rs  socket.rs
gated-core/src/protocols/: handle.rs  mod.rs
gated-core/src/rate_limiting/: limiter.rs  mod.rs  registry.rs  shared_limiter.rs  stream.rs  swappable_cell.rs
gated-core/src/recordings/: mod.rs  terminal.rs  traffic.rs  writer.rs
gated-database-protocols/: Cargo.toml
gated-db-entities/: Cargo.toml
gated-db-entities/src/: CertificateCredential.rs  LdapServer.rs  OtpCredential.rs  PasswordCredential.rs  PublicKeyCredential.rs  Recording.rs  Role.rs  SsoCredential.rs  Target.rs  User.rs
gated-db-migrations/: Cargo.toml
gated-db-migrations/src/: lib.rs  m00001_initial.rs  main.rs
gated-ldap/: Cargo.toml
gated-ldap/src/: connection.rs  error.rs  types.rs
gated-mcp/: Cargo.toml
gated-mcp/src/: auth.rs  lib.rs  protocol.rs  tools.rs
gated-protocol-api/: Cargo.toml
gated-protocol-api/src/: lib.rs  proxy.rs  recording.rs  session_handle.rs
gated-protocol-http/: Cargo.toml
gated-protocol-http/src/: api_proxy.rs  catchall.rs  common.rs  error.rs  lib.rs  main.rs  session.rs  session_handle.rs  spa.rs
gated-protocol-http/src/api/: api_tokens.rs  auth.rs  common.rs  credentials.rs  info.rs  mod.rs  ssh_terminal.rs  sso_provider_detail.rs  sso_provider_list.rs  targets_list.rs
gated-protocol-http/src/middleware/: ticket.rs
gated-protocol-kubernetes/: Cargo.toml
gated-protocol-kubernetes/src/: correlator.rs  lib.rs  recording.rs  session_handle.rs
gated-protocol-kubernetes/src/server/: auth.rs  handlers.rs  mod.rs
gated-protocol-mysql/: Cargo.toml
gated-protocol-mysql/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
gated-protocol-postgres/: Cargo.toml
gated-protocol-postgres/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
gated-protocol-ssh/: Cargo.toml
gated-protocol-ssh/src/: keys.rs  known_hosts.rs  lib.rs
gated-protocol-ssh/src/client/: channel_direct_tcpip.rs  channel_session.rs  error.rs  handler.rs  mod.rs
gated-protocol-ssh/src/server/: mod.rs  russh_handler.rs  service_output.rs  session.rs  session_handle.rs
gated-sso/: Cargo.toml
gated-sso/src/: request.rs  sso.rs
gated-tls/: Cargo.toml
gated-tls/src/: rustls_helpers.rs
gated-web/: Cargo.toml  components.json  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
gated-web/public/locales/en/: admin.json  common.json  gateway.json
gated-web/public/locales/zh-CN/: admin.json  common.json  gateway.json
gated-web/src/: lib.rs  main.tsx
gated-web/src/app/: i18n.ts  providers.tsx  router.tsx
gated-web/src/features/admin/: api.ts
gated-web/src/features/gateway/: api.ts
gated-web/src/mocks/: data.ts  handlers.ts
gated-web/src/shared/components/: app-breadcrumb.tsx  auth-guard.tsx  breadcrumb-nav.tsx  card-skeleton.tsx  confirm-dialog.tsx  copy-button.tsx  data-table.tsx  (+9 more)
gated-web/src/styles/: app.css
gated/src/: config.rs  logging.rs  main.rs
gated/src/commands/: check.rs  client_keys.rs  create_user.rs  healthcheck.rs  mcp.rs  mod.rs  recover_access.rs  run.rs  setup.rs
tests/: Makefile  bunfig.toml  package.json  run.sh  tsconfig.json
tests/api/auth/: cookie-auth.test.ts  unauthorized.test.ts
tests/api/credentials/: certificate.test.ts  otp.test.ts  password.test.ts  public-key.test.ts  sso.test.ts
tests/api/parameters/: get.test.ts  update.test.ts
tests/api/roles/: create.test.ts  delete.test.ts  get.test.ts  list.test.ts  targets.test.ts  update.test.ts
tests/api/sessions/: delete.test.ts  list.test.ts
tests/api/ssh/: known-hosts.test.ts  own-keys.test.ts
tests/api/targets/: create.test.ts  delete.test.ts  get.test.ts  list.test.ts  roles.test.ts  update.test.ts
tests/api/tickets/: create.test.ts  delete.test.ts  list.test.ts
tests/api/users/: create.test.ts  delete.test.ts  get.test.ts  list.test.ts  roles.test.ts  update.test.ts
tests/db/: postgres-auth-in-browser.test.ts  postgres-auth-password.test.ts
tests/helpers/: api-client.ts  gated-helpers.ts  process-manager.ts  session.ts  setup.ts  util.ts
tests/kubernetes/: integration.test.ts
tests/misc/: json-logs.test.ts
tests/oidc-mock/: clients-config.json
tests/ssh/: auth-in-browser.test.ts  auth-otp.test.ts  auth-password.test.ts  auth-pubkey.test.ts  auth-ticket.test.ts  client-auth-config.test.ts  proto.test.ts  target-selection.test.ts
(+73 files in other folders)
