[package]
edition = "2021"
license = "Apache-2.0"
name = "gated-admin"
version = "0.21.1"

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
bytes.workspace = true
chrono = { version = "0.4", default-features = false }
futures.workspace = true
hex.workspace = true
mime_guess = { version = "2.0", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
russh.workspace = true
rust-embed = { version = "8.3", default-features = false }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
gated-ca = { version = "*", path = "../gated-ca" }
gated-common = { version = "*", path = "../gated-common" }
gated-tls = { version = "*", path = "../gated-tls" }
gated-core = { version = "*", path = "../gated-core" }
gated-db-entities = { version = "*", path = "../gated-db-entities" }
gated-ldap = { version = "*", path = "../gated-ldap" }
gated-protocol-ssh = { version = "*", path = "../gated-protocol-ssh" }
gated-protocol-kubernetes = { version = "*", path = "../gated-protocol-kubernetes" }
regex.workspace = true
