[package]
edition = "2021"
license = "Apache-2.0"
name = "gated-db-entities"
version = "0.21.1"

[dependencies]
bytes = { version = "1.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
poem-openapi.workspace = true
sqlx.workspace = true
sea-orm = { workspace = true, features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
gated-common = { version = "*", path = "../gated-common", default-features = false }
secrecy = "0.10"
gated-tls = { version = "*", path = "../gated-tls", default-features = false }
gated-ldap = { version = "*", path = "../gated-ldap" }
