[package]
edition = "2021"
license = "Apache-2.0"
name = "gated-protocol-kubernetes"
version = "0.21.1"

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dashmap = { version = "6.0", default-features = false }
futures.workspace = true
http = { version = "1.0", default-features = false }
lazy_static = { version = "1.4", default-features = false }
md5 = { version = "0.7", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
sea-orm.workspace = true
secrecy = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false }
tracing.workspace = true
url = { version = "2.0", default-features = false }
uuid.workspace = true
gated-common = { version = "*", path = "../gated-common", default-features = false }
gated-core = { version = "*", path = "../gated-core", default-features = false }
gated-db-entities = { version = "*", path = "../gated-db-entities", default-features = false }
gated-tls = { version = "*", path = "../gated-tls", default-features = false }
gated-ca = { version = "*", path = "../gated-ca", default-features = false }
tokio-tungstenite.workspace = true
reqwest-websocket.workspace = true
