[package]
edition = "2021"
license = "Apache-2.0"
name = "gated-protocol-ssh"
version = "0.21.1"

[dependencies]
ansi_term = { version = "0.12", default-features = false }
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
bimap = { version = "0.6", default-features = false, features = ["std"] }
bytes.workspace = true
dialoguer.workspace = true
curve25519-dalek = { version = "4.0.0", default-features = false } # pin due to build fail on x86
ed25519-dalek = { version = "2.0.0", default-features = false } # pin due to build fail on x86 in 2.1
futures.workspace = true
russh.workspace = true
serde.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
time = { version = "0.3", default-features = false }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
gated-common = { version = "*", path = "../gated-common", default-features = false }
gated-core = { version = "*", path = "../gated-core", default-features = false }
gated-db-entities = { version = "*", path = "../gated-db-entities", default-features = false }
zeroize = { version = "^1.5", default-features = false }
