[package]
edition = "2021"
license = "Apache-2.0"
name = "gated"
version = "0.21.1"

[dependencies]
ansi_term = { version = "0.12", default-features = false }
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
bytes.workspace = true
clap = { version = "4.0", features = ["derive", "env"], default-features = false }
config = { version = "0.15", features = ["yaml"], default-features = false }
console = { version = "0.15", default-features = false }
console-subscriber = { version = "0.4", optional = true, default-features = false }
data-encoding.workspace = true
dialoguer.workspace = true
enum_dispatch.workspace = true
futures.workspace = true
notify = { version = "8.0", default-features = false, features = ["fsevent-sys"] }
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde_json.workspace = true
serde_yaml = { version = "0.9", default-features = false }
sea-orm.workspace = true
time = { version = "0.3", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "local-time",
], default-features = false }
uuid = { version = "1.3", default-features = false }
gated-admin = { version = "*", path = "../gated-admin" }
gated-common = { version = "*", path = "../gated-common" }
gated-ca = { version = "*", path = "../gated-ca" }
gated-core = { version = "*", path = "../gated-core" }
gated-db-entities = { version = "*", path = "../gated-db-entities" }
gated-protocol-http = { version = "*", path = "../gated-protocol-http" }
gated-protocol-mysql = { version = "*", path = "../gated-protocol-mysql" }
gated-protocol-postgres = { version = "*", path = "../gated-protocol-postgres" }
gated-protocol-ssh = { version = "*", path = "../gated-protocol-ssh" }
gated-protocol-kubernetes = { version = "*", path = "../gated-protocol-kubernetes" }
gated-tls = { version = "*", path = "../gated-tls" }
gated-mcp = { version = "*", path = "../gated-mcp" }
schemars.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.4", default-features = false }

[features]
default = ["sqlite"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
postgres = ["gated-core/postgres"]
mysql = ["gated-core/mysql"]
sqlite = ["gated-core/sqlite"]
